# autocuda

./: .gitignore  CMakeLists.txt  README.md  autocuda.py  bench.cu  bootstrap.bash  cuda-kernel-optimization-experiment.md  cuda-kernel-optimization-idea-skill.md  cuda-kernel-optimization-iteration-skill.md  cuda-kernel-optimization-trial.md  dashboard.py  kernel.cuh  program.md
.claude-plugin/: marketplace.json
ci/: build-and-test.bash  plot_progress.py
kernels/matmul/: bench.cu  kernel.cuh
kernels/memcpy/: bench.cu  kernel.cuh
kernels/sigmoid/: bench.cu  kernel.cuh
kernels/stencil/: bench.cu  kernel.cuh
plugins/autocuda/: README.md
plugins/autocuda/.claude-plugin/: plugin.json
plugins/autocuda/skills/discover/: SKILL.md
plugins/autocuda/skills/discover-cuda/: SKILL.md
plugins/autocuda/skills/optimize/: SKILL.md
plugins/autocuda/skills/optimize-cuda/: SKILL.md
prompts/: optimize-cuda-decision.md  optimize-cuda-kernel-decision.md  optimize-cuda-kernel-trial.md  optimize-cuda-trial.md
skills/discover-cuda/: SKILL.md
skills/optimize-cuda/: SKILL.md
skills/optimize-cuda-kernel/: SKILL.md
